fixed paths + hit counter

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
   </head>
 
   <body>
-    <!-- <div class="main animated animatedFadeInUp fadeInUp"> -->
-    <div class="main">
+    <div class="main animated animatedFadeInUp fadeInUp">
+    <!-- <div class="main"> -->
       <header>
         <div id="pageTitle">sebfez.com</div>
         <div id="headerBox">
@@ -130,6 +130,6 @@
     </div>
     <div id="endImg""><img src="rsc/img/neskaya.net_barunson8.gif"></div>
     <script>window.onbeforeunload = function () {window.scrollTo(0,0);};</script>
-    <!-- <script src="printimg.js"></script> -->
+    <script src="printimg.js"></script>
   </body>
 </html>
