--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 
       <!-- TO-DO Box -->
       <div style="overflow: auto;" class="contentBox" id="todoBox">
-        <h4 id="todoImg"><img src="./rsc/img/a1.gif">Todo<img src="./rsc/img/a4.gif"></h4>
+        <h4 id="todoImg"><img src="./rsc/img/a1.gif">To do:<img src="./rsc/img/a4.gif"></h4>
         <div style="padding-bottom: 7px;"></div>
         <p><img class ="todoBullet">drink peach tea</p>
         <p><img class ="todoBullet">whiff pulse bombs</p>
@@ -80,12 +80,7 @@
        <div id = "logTitle"><p>Website Log</p><hr></div>
        <div style ="padding-top: 28px;"></div>
        <div>
-        <p>test<hr></p>
-        <p>test<hr></p>
-        <p>test<hr></p>
-        <p>test<hr></p>
-        <p>test<hr></p>
-        <p>test<hr></p>
+        <p><span style="color: #0be003">08/02/25</span> Website (finally) online! Welcome!<hr></p>
        </div>
       </div>
 
