--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
         <div id = "creditsBox">
          <p style="font-size: small;"><a href="https://cinni.net/directory/" target="_blank"> <img src="https://cinni.net/directory/img/88x31.png"></a> <a href="https://cinni.net/directory/">ichigo directory</a></p>
          <p><a href="https://99gifshop.neocities.org" target="_blank"> <img src="./rsc/img/88x31.png"></a> <a href="https://99gifshop.neocities.org">99Gif Shop</a></p>
-         <p style="font-size: x-small;""><a href="https://cinni.net" target="_blank"> <img src="./rsc/img/cinni_angelbutton3.gif"></a> <a href="https://cinni.net">Cinni's Dream Home</a></p></p>
+         <p style="font-size: x-small;"><a href="https://cinni.net" target="_blank"> <img src="./rsc/img/cinni_angelbutton3.gif"></a> <a href="https://cinni.net">Cinni's Dream Home</a></p></p>
         </div>
        </div>
 
@@ -123,8 +123,8 @@
       </footer>
       
     </div>
-    <div id="endImg""><img src="rsc/img/neskaya.net_barunson8.gif"></div>
+    <div id="endImg"><img src="rsc/img/neskaya.net_barunson8.gif"></div>
     <script>window.onbeforeunload = function () {window.scrollTo(0,0);};</script>
-    <script src="printimg.js"></script>
+    <script src="./printimg.js"></script>
   </body>
 </html>
