--- a/public/blog.html
+++ b/public/blog.html
@@ -35,7 +35,7 @@
       </footer>
 
     </div>
-    <div id="endImg""><img src="rsc/img/neskaya.net_barunson8.gif"></div>
+    <div id="endImg"><img src="rsc/img/neskaya.net_barunson8.gif"></div>
     <script>window.onbeforeunload = function () {window.scrollTo(0,0);};</script>
   </body>
 </html>
