--- a/public/not_found.html
+++ b/public/not_found.html
@@ -31,7 +31,7 @@
         </div>
       </footer>
     </div>
-    <div id="endImg""><img src="rsc/img/neskaya.net_barunson8.gif"></div>
+    <div id="endImg"><img src="rsc/img/neskaya.net_barunson8.gif"></div>
     <script>window.onbeforeunload = function () {window.scrollTo(0,0);};</script>
   </body>
 </html>
