--- a/public/index.html
+++ b/public/index.html
@@ -104,17 +104,18 @@
       <div id="hitCounter">
         <img id="sailorSit" src="./rsc/img/anime_mina_move.gif">
         <img id="cinniSit" src="./rsc/img/tumblr_mdodzhh58i1qid2nw540.gif">
-        <p>You are visitor:</p>
-        <img class="hitImg" id="num7" src="./rsc/img/num0.gif">
-        <img class="hitImg" id="num6" src="./rsc/img/num0.gif">
-        <img class="hitImg" id="num5" src="./rsc/img/num0.gif">
-        <img class="hitImg" id="num4" src="./rsc/img/num0.gif">
-        <img class="hitImg" id="num3" src="./rsc/img/num0.gif">
-        <img class="hitImg" id="num2" src="./rsc/img/num0.gif">
+        <!-- <p>You are visitor:</p> -->
+        <img class="hitImg" id="num7" src="./rsc/img/num1.gif">
+        <img class="hitImg" id="num6" src="./rsc/img/num3.gif">
+        <img class="hitImg" id="num5" src="./rsc/img/num3.gif">
+        <img class="hitImg" id="num4" src="./rsc/img/num7.gif">
+        <img class="hitImg" id="num3" src="./rsc/img/num4.gif">
+        <img class="hitImg" id="num2" src="./rsc/img/num2.gif">
         <img class="hitImg" id="num1" src="./rsc/img/num0.gif">
-        <p style="transform: translateY(-5px); margin-right: 15px;">Thank <span style="color: #eb0dcd"><u>you</u></span>!</p>
+        <!-- <p style="transform: translateY(-5px); margin-right: 15px;">Thank <span style="color: #eb0dcd"><u>you</u></span>!</p> -->
       </div>
       <img id="tarotR" src="./rsc/img/tarot-reversed.gif">
+
 
       <footer>
         <div id="footerBar">
@@ -125,6 +126,6 @@
     </div>
     <div id="endImg"><img src="rsc/img/neskaya.net_barunson8.gif"></div>
     <script>window.onbeforeunload = function () {window.scrollTo(0,0);};</script>
-    <script src="./printimg.js"></script>
+    <!-- <script src="./printimg.js"></script> -->
   </body>
 </html>
